--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.10.2"
+actix-cors = "0.7.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
