--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,5 @@ actix-web = "4.10.2"
 actix-cors = "0.7.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+uuid = { version = "1.4", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
